fixed footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ h4{
 }
 .footer{
 	position: relative;
-	bottom: 20px;
+	
 }
 .footer img{
 		max-width: 100%;
